# technical-task-2

./: .gitignore  README.md  elm.json  package.json
backend/: README.md  backend.cabal
backend/src/: Main.hs
backend/src/Backend/: Servant.hs  Sql.hs  Types.hs  UrlParams.hs
example/: index.js  package.json
src/: Main.elm  index.html
