cabal-version:      3.6
name:               backend
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Josh Godsiff
maintainer:         thedataangel@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable backend
    main-is:          Main.hs
    ghc-options:      -Wall

    -- Modules included in this executable, other than Main.
    other-modules:    Backend.Servant
                    , Backend.Types
                    , Backend.UrlParams
                    , Backend.Sql

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base            ^>= 4.14.3.0
                    , servant-server  ^>= 0.19
                    , servant         ^>= 0.19
                    , wai             ^>= 3.2.3
                    , text            ^>= 2.0
                    , sqlite-simple   ^>= 0.4.18.1
                    , http-api-data   ^>= 0.4.1
                    , warp            ^>= 3.3.21
                    , aeson           ^>= 2.1.0.0
                    , wai-cors        ^>= 0.2.7
    hs-source-dirs:   src
    default-language: Haskell2010
